2014-05-16  James Greenhalgh  <james.greenhalgh@arm.com>
	    Philipp Tomsich  <philipp.tomsich@theobroma-systems.com>

	* config/aarch64/aarch64.c (aarch64_build_constant): Conditionally
	emit instructions, return number of instructions which would
	be emitted.
	(aarch64_add_constant): Update call to aarch64_build_constant.
	(aarch64_output_mi_thunk): Likewise.
	(aarch64_rtx_costs): Estimate cost of a CONST_INT, cost
	a CONST_DOUBLE.

2014-05-16  James Greenhalgh  <james.greenhalgh@arm.com>

	* config/aarch64/aarch64.c (aarch64_rtx_costs_wrapper): New.
	(TARGET_RTX_COSTS): Call it.

2014-05-16  James Greenhalgh  <james.greenhalgh@arm.com>

	* config/aarch64/aarch64.c (cortexa57_addrcost_table): New.
	(cortexa57_vector_cost): Likewise.
	(cortexa57_tunings): Use them.

2014-05-16  James Greenhalgh  <james.greenhalgh@arm.com>

	* config/aarch64/aarch64-protos.h (scale_addr_mode_cost): New.
	(cpu_addrcost_table): Use it.
	* config/aarch64/aarch64.c (generic_addrcost_table): Initialize it.
	(aarch64_address_cost): Rewrite using aarch64_classify_address,
	move it.

2014-04-22  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>

	* config/aarch64/aarch64.c (TARGET_FLAGS_REGNUM): Define.
2015-06-26  Release Manager

	* GCC 4.9.3 released.

2015-06-26  Jakub Jelinek  <jakub@redhat.com>

	* doc/cpp.texi: Update displayed copyright years.
	* doc/cppinternals.texi: Likewise.
	* doc/gcc.texi: Likewise.
	* doc/gccint.texi: Likewise.
	* doc/gcov.texi: Likewise.
	* doc/install.texi: Likewise.
	* doc/invoke.texi: Likewise.
	* gcc.c: Likewise.
	* gcov-dump.c: Likewise.
	* gcov.c: Likewise.

2015-06-23  Matthias Klose  <doko@ubuntu.com>

	PR target/66483
	Backport from mainline r212178.
	2014-06-30  Joseph Myers  <joseph@codesourcery.com>

        * var-tracking.c (add_stores): Return instead of asserting if old
        and new values for conditional store are the same.

2015-06-23  Ludovic Courtès  <ludo@gnu.org>

	PR 65711
	* config/arm/linux-elf.h (LINUX_TARGET_LINK_SPEC): Move